[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/joystick/virtual_joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/test/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/camera_control/camera_control.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/test/ui/heli.png" type="Texture" id=5]
[ext_resource path="res://gameplay/test/ui/fix_wing.png" type="Texture" id=6]
[ext_resource path="res://gameplay/test/ui/tank.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/touch_button/touch_button.tscn" type="PackedScene" id=8]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 100.0
mouse_filter = 2
alignment = 1

[node name="tank" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 344.0
margin_right = 444.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 448.0
margin_right = 458.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="heli" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 462.0
margin_right = 562.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 566.0
margin_right = 576.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="fix_wing" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 580.0
margin_right = 680.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="camera_control" parent="CanvasLayer/Control" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 2

[node name="virtual_joystick" parent="CanvasLayer/Control" instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = -286.0
margin_right = 310.0
margin_bottom = -86.0
mouse_filter = 2

[node name="up" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -160.0
margin_right = 164.0
margin_bottom = -80.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control/up"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Up"
align = 1
valign = 1

[node name="down" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -159.0
margin_right = 6.0
margin_bottom = -79.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control/down"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Down"
align = 1
valign = 1

[node name="fire" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -176.0
margin_right = -72.0
margin_bottom = -96.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control/fire"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Fire"
align = 1
valign = 1

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/tank" to="." method="_on_tank_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/heli" to="." method="_on_heli_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/fix_wing" to="." method="_on_fix_wing_pressed"]
